Dark Mode Added

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Rubik+Doodle+Shadow&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;700&family=Rubik+Doodle+Shadow&family=Rubik+Scribble&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
