--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Josefin+Slab:wght@400;700&family=Rubik+Doodle+Shadow&family=Rubik+Scribble&display=swap"
       rel="stylesheet"
     />
+    <!-- in your header -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
